Fix small-height videos too small
When it's too short, the native video player UI is cramped

--- a/src/app.css
+++ b/src/app.css
@@ -463,6 +463,9 @@ a.mention span {
   max-height: 100vh;
   max-height: 100dvh;
 }
+.carousel > * video {
+  min-height: 80px;
+}
 
 .carousel-top-controls {
   top: 0;
